<resources>

    <string name="app_name">Atii</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- book list -->
    <string name="book_preview">Book Preview</string>

    <!-- page -->
    <string name="page_image_view">Page Image View</string>
    <string name="page_image_preview">Page Image Preview</string>
    <string name="empty_page">Page is empty.\nPlease add page image.</string>

    <!-- modes -->
    <string name="mode">Play Back or Play Out</string>
    <string name="playback">Play Back</string>
    <string name="playout">Play Out</string>

    <!-- track info -->
    <string name="no_audio">No Audio</string>

    <!-- buttons -->
    <string name="add_before">Add Before</string>
    <string name="add_after">Add After</string>
    <string name="capture">Capture</string>
    <string name="delete">Delete</string>
    <string name="first">Goto First Page</string>
    <string name="last">Goto Last Page</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="repeat">Repeat</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="snap">Snap</string>
    <string name="retake">Retake</string>
    <string name="exposure_plus">EV+</string>
    <string name="exposure_minus">EV-</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="choose">Choose</string>
    <string name="pick_picture">Choose Page Image</string>

    <!-- file chooser -->
    <string name="back_to_parent_folder">Back to parent folder</string>
    <string name="file_type">File type</string>

    <!-- action items - book list -->
    <string name="menu_create">Create</string>

    <!-- action mode - book selected -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <!-- book creation dialog -->
    <string name="book_creation">Book Creation</string>
    <string name="book_title_entry">Please enter title of the book here.</string>
    <string name="book_title_default">Untitled Book</string>
    <string name="import_page_images">Import Page Images</string>
    <string name="choose_folder">Choose a Folder</string>

    <!-- book deletion dialog -->
    <string name="book_deletion_dialog_title">Book Deletion</string>
    <string name="deletion_no_undo_warning">This cannot be undone.</string>
    <string name="page_deletion_dialog_title">Page Deletion</string>

    <!-- book deletion dialog -->
    <string name="about_dialog_title">Atii &#8212; A Dragonfly Studios Project</string>
    <string name="about_dialog_message">Version 0.7\n\nFor reading picture books with children, recording the reading, and, later, sharing it. \n\nDesigned &amp; implemented by Jun Luo (jun@dragonflystudios.ca)\n\n</string>

    <!-- action items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_switch_to_reader">Reader</string>
    <string name="menu_switch_to_author">Author</string>

    <!-- action items - player -->
    <string name="menu_record_audio">Record Audio</string>
    <string name="menu_capture_photo">Capture Photo</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_page">Add Page</string>

</resources>